# qml6_template_project

./: CMakeLists.txt
src/App/: CMakeLists.txt  main.cpp
src/App/ui/: FramedImage.qml  main.qml  resources.qrc
src/App/ui/components/: qmldir
